# vanish

./: .env.example  Cargo.toml  Dockerfile  README.md  build_and_push.sh  docker-compose.yml
src/: lib.rs  main.rs
static/: index.html
tests/: integration_test.rs
