[package]
name = "vanish"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.4"
serde_json = "1.0"
actix-files = "0.6"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
serde_json = "1.0"
actix-http = "3"

[profile.release]
# Optimize for small binary size
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic

